fix(front): fix z-indexes

--- a/front-v2/src/app/components/expenses/expenses.component.scss
+++ b/front-v2/src/app/components/expenses/expenses.component.scss
@@ -144,7 +144,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 8;
+  z-index: 20;
   bottom: 0;
   left: 0;
   height: 115px;
