--- a/front-v2/src/app/design-system/scroll-to-top/scroll-to-top.component.scss
+++ b/front-v2/src/app/design-system/scroll-to-top/scroll-to-top.component.scss
@@ -24,7 +24,7 @@
     border-radius: 50%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    z-index: 1000;
+    z-index: 19;
     opacity: 0;
     transform: scale(0.9);
     transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
